<resources>
    <string name="app_name">Vista</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sing_up">Sing Up</string>
    <string name="login">LOGIN</string>
    <string name="remember_credentials">Remember Credentials</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="todo">Todo</string>
</resources>